# llm-routing

./: README.md  env_template  pyproject.toml
src/: 4_fault_tolerance.py
src/advanced/: 2_advanced_routing.py
src/basic/: 1_llm_router.py
src/openrouter-langchain-agents/: main.py
